src/objects/Deferred_Developer_Fee__c.object
<CustomObject>
    <description>LPAM</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Project__c</fullName>
        <label>Loan Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Deferred Developer Fees</relationshipLabel>
        <relationshipName>Deferred_Developer_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Deferred Developer Fee</label>
    <nameField>
        <displayFormat>DDF-{00000}</displayFormat>
        <label>Deferred Developer Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferred Developer Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>